[project]
name = "atcoder-upsolve"
version = "0.1.0"
dependencies = [
    "numpy==1.24.1",
    "scipy==1.10.1",
    "networkx==3.0",
    "sympy==1.11.1",
    "sortedcontainers==2.4.0",
    "more-itertools==9.0.0",
    "shapely==2.0.0",
    "bitarray==2.6.2",
    "PuLP==2.7.0",
    "mpmath==1.2.1",
    "pandas==1.5.2",
    "z3-solver==4.12.1.0",
    "scikit-learn==1.2.0",
    "ortools==9.5.2237",
    "cppyy==2.4.1",
    "polars==0.15.15",
    "lightgbm==3.3.1",
    "gmpy2==2.1.5",
    "numba==0.57.0",
    "ac-library-python @ git+https://github.com/not522/ac-library-python@58f324ec020d57191e7b9e4957b0c5feb5ed3aff",
    "torch==1.13.1+cpu",
]
requires-python = ">= 3.11"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.black]
line-length = 120

[tool.ruff]
line-length = 120
select = ["ALL"]
ignore = ["CPY", "EXE", "T20", "E203", "E501", "D100", "INP001"]

[tool.ruff.pydocstyle]
convention = "google"

[tool.rye]
managed = true
dev-dependencies = [
    "black~=23.3.0",
    "pytest~=7.3.2",
    "ruff>=0.0.287",
    "mypy>=1.5.1",
]

[tool.rye.scripts]
format = { chain = ["black src", "ruff check --fix src"] }
lint = { chain = ["black --check src", "ruff check src", "mypy src"] }
test = { chain = ["python -m pytest tests"] }

[tool.hatch.metadata]
allow-direct-references = true

[[tool.rye.sources]]
name = "torch"
url = "https://download.pytorch.org/whl/cpu"
type = "index"
