[project]
name = "atcoder-upsolve"
version = "0.1.0"
dependencies = [
    "numpy==1.24.1",
    "scipy==1.10.1",
    "networkx==3.0",
    "sympy==1.11.1",
    "sortedcontainers==2.4.0",
    "more-itertools==9.0.0",
    "shapely==2.0.0",
    "bitarray==2.6.2",
    "PuLP==2.7.0",
    "mpmath==1.2.1",
    "pandas==1.5.2",
    "z3-solver==4.12.1.0",
    "scikit-learn==1.2.0",
    "ortools==9.5.2237",
    #"cppyy==2.4.1",
    "polars==0.15.15",
    "lightgbm==3.3.1",
    "gmpy2==2.1.5",
    "numba==0.57.0",
    "ac-library-python @ git+https://github.com/not522/ac-library-python@58f324ec020d57191e7b9e4957b0c5feb5ed3aff",
    "torch==1.13.1+cpu",
]
requires-python = ">= 3.11"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.ruff]
line-length = 120
lint.select = ["ALL"]
lint.ignore = [
    "EXE",    # flake8-executable
    "T20",    # flake8-print
    "E501",   # line-too-long
    "D203",   # one-blank-line-before-class
    "D213",   # multi-line-summary-second-line
    "D100",   # undocumented-public-module
    "D415",   # ends-in-punctuation
    "INP001", # implicit-namespace-package
    "S101",   # assert
    "COM812", # missing-trailing-comma
    "ISC001", # single-line-implicit-string-concatenation
]
lint.pydocstyle.convention = "google"

[tool.mypy]
strict = true

[tool.pytest.ini_options]
pythonpath = "."
testpaths = ["tests"]

[tool.hatch.metadata]
allow-direct-references = true

[tool.hatch.build.targets.wheel]
packages = ["src"]

[[tool.uv.index]]
name = "pytorch-cpu"
url = "https://download.pytorch.org/whl/cpu"
explicit = true

[tool.uv.sources]
torch = [{ index = "pytorch-cpu" }]
torchvision = [{ index = "pytorch-cpu" }]
